# OpenRingDetector

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  PLAN.md  README.md  alembic.ini  database_sql.py  database_sql_model.py  database_vec.py  detect.py  detect_vehicle-speedtest.py  detect_vehicle.py  docker-compose.override.yml  docker-compose.yml  embed_images-pubsub.py  embed_images.py  face_modify.ipynb  image_processor.py  insert_ref.py  load_models.py  ntfy.py  pub_sub.py  pyproject.toml  readme.md  requirements.txt  ring-detector.sh  ring.py  run_emb.ipynb  utils.py
alembic/: README.md  env.py  script.py.mako
alembic/versions/: 001_initial_schema.py
backend/: Dockerfile  requirements.txt
backend/app/: chat_context.py  chat_entities.py  main.py  schemas.py  watcher_manager.py  websocket.py
backend/app/routers/: analytics.py  chat.py  events.py  faces.py  images.py  test.py  (+6 more)
db-init-scripts/: initdb.sql
docs/: chat-feature-plan.md  chat-feature-prompt.md  dashboard-prompt.md
frontend/: nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: app.css  app.html
notebooks/: database.ipynb  emb.ipynb  embedding.ipynb  extract_frames.ipynb  milvus.ipynb  mutiheaed_test.ipynb  ntfy.ipynb  ring_test.ipynb  test_main.ipynb  yolo_detection.ipynb
pgadmin/: servers.json
plans/: dashboard-plan.md
ring_detector/: __init__.py  captioner.py  cli.py  config.py  database.py  detector.py  face_detector.py  face_utils.py  image_utils.py  models.py  notifications.py  ring_api.py  watcher.py
scripts/: compare_captioners.py  download_face_models.sh  download_model.sh
tests/: test_captioner.py  test_config.py  test_face_matching.py  test_image_utils.py  test_notifications.py  test_watcher.py
(+47 files in other folders)
